[gd_scene load_steps=10 format=3 uid="uid://dicf310eeacbb"]

[ext_resource type="Script" uid="uid://p4gdh1erril4" path="res://scripts/input_lamp_on.gd" id="1_4nhs5"]
[ext_resource type="Texture2D" uid="uid://bk68j4lsmikno" path="res://assets/furniture/lampon.png" id="2_yghcm"]
[ext_resource type="FontFile" uid="uid://du2qhjejgfbpx" path="res://assets/fonts/IndieFlower-Regular.ttf" id="3_2sx5j"]
[ext_resource type="Texture2D" uid="uid://xy1skntcqxr0" path="res://assets/textLabels/Excelente!.png" id="4_yghcm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jleqy"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jc4vj"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_db1xo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Excelente!:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.0166666, 0.0166666)]
}

[sub_resource type="Animation" id="Animation_2f4ux"]
resource_name = "new_animation"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Excelente!:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.0166666, 0.0166666), Vector2(1, 1), Vector2(0.0166666, 0.0166666)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dnxrp"]
_data = {
&"RESET": SubResource("Animation_db1xo"),
&"anim": SubResource("Animation_2f4ux")
}

[node name="input_LampOn" type="Node2D"]
script = ExtResource("1_4nhs5")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -964.0
offset_top = -542.5
offset_right = 964.0
offset_bottom = 542.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.403922)

[node name="Lampon" type="Sprite2D" parent="."]
position = Vector2(-3, -48)
scale = Vector2(0.384943, 0.384943)
texture = ExtResource("2_yghcm")

[node name="LineEdit" type="LineEdit" parent="."]
z_index = 2
offset_left = -186.0
offset_top = -386.0
offset_right = -38.0
offset_bottom = -304.0
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 0)
theme_override_colors/clear_button_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(0.482226, 0.741199, 0.984076, 1)
theme_override_fonts/font = ExtResource("3_2sx5j")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_jleqy")
theme_override_styles/normal = SubResource("StyleBoxFlat_jc4vj")
max_length = 1
metadata/_edit_use_anchors_ = true

[node name="LineEdit2" type="LineEdit" parent="."]
z_index = 3
offset_left = -41.0
offset_top = -386.0
offset_right = 107.0
offset_bottom = -304.0
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 0)
theme_override_colors/clear_button_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(0.482226, 0.741199, 0.984076, 1)
theme_override_fonts/font = ExtResource("3_2sx5j")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_jleqy")
theme_override_styles/normal = SubResource("StyleBoxFlat_jc4vj")
max_length = 1
metadata/_edit_use_anchors_ = true

[node name="instruction" type="Label" parent="."]
offset_left = -137.0
offset_top = -386.0
offset_right = -57.0
offset_bottom = -312.0
theme_override_fonts/font = ExtResource("3_2sx5j")
theme_override_font_sizes/font_size = 50
text = "amp"
metadata/_edit_use_anchors_ = true

[node name="instruction2" type="Label" parent="."]
offset_left = 5.0
offset_top = -386.0
offset_right = 144.0
offset_bottom = -312.0
theme_override_fonts/font = ExtResource("3_2sx5j")
theme_override_font_sizes/font_size = 50
text = "ra"
metadata/_edit_use_anchors_ = true

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(-42, -325)
points = PackedVector2Array(30, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
width = 5.0
default_color = Color(0.504511, 0.920221, 1, 1)

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2(-180, -325)
points = PackedVector2Array(30, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
width = 5.0
default_color = Color(0.504511, 0.920221, 1, 1)

[node name="Excelente!" type="Sprite2D" parent="."]
position = Vector2(-11, -24)
scale = Vector2(0.0166666, 0.0166666)
texture = ExtResource("4_yghcm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dnxrp")
}
